--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ChatGPT 5.2 使用指南 - 2026 特别版</title>
-    <meta name="description" content="2026年最新指南：GPT 5.2 已正式上线，国内直连 ChatGPT 官网及中文版使用教程。">
+    <title>ChatGPT 5.2 使用指南 - 2026 ChatGPT 官网及中文版使用教程</title>
+    <meta name="description" content="2026年最新指南：GPT 5.2 已正式上线，国内直连 ChatGPT 官网及中文版使用教程。国内 ChatGPT-5 中文版镜像网站合集：推荐可直连使用的 ChatGPT 中文版镜像站，无需魔法，支持 GPT-5.2、GPT-5、GPT-4o、o1、DeepSeek、Gemini 等最新模型，全面使用教程与对比分析。">
+    <meta name="keywords" content="ChatGPT,ChatGPT官网,Chat GPT官网,chatgpt官网地址,chat gpt,gpt官网,openai官网,chatgpt中文版,GPT-5,GPT-5.2,GPT-4o,国内使用,DeepSeek,Gemini,Claude">
+    <meta property="og:title" content="国内 ChatGPT-5 中文版镜像网站整理（2026/1/4）【镜像网站合集】">
+    <meta property="og:description" content="推荐可直连使用的 ChatGPT 中文版镜像站，支持 GPT-5、GPT-4o、DeepSeek、Gemini、Claude，国内可用，无需翻墙。">
+    <meta name="twitter:card" content="summary_large_image">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* 强制使用 Apple 系统字体栈 */
@@ -86,12 +90,12 @@
         
         <div class="hidden md:flex items-center space-x-8 text-xs font-medium text-[#424245]">
             <a href="#hero" class="hover:text-black transition-colors">概览</a>
-            <a href="#access" class="hover:text-black transition-colors">镜像入口</a>
+            <a href="https://aihuoya.com" class="hover:text-black transition-colors">镜像入口</a>
             <a href="#compare" class="hover:text-black transition-colors">参数对比</a>
-            <a href="#guide" class="hover:text-black transition-colors">教程</a>
+            <a href="https://chatgpt-china.com" class="hover:text-black transition-colors">教程</a>
         </div>
 
-        <a href="#access" class="hidden md:inline-flex bg-[#0071e3] text-white text-xs px-3 py-1.5 rounded-full font-medium hover:bg-[#0077ED] transition-colors btn-press">
+        <a href="https://xsimplechat.com" class="hidden md:inline-flex bg-[#0071e3] text-white text-xs px-3 py-1.5 rounded-full font-medium hover:bg-[#0077ED] transition-colors btn-press">
             立即使用
         </a>
     </nav>
@@ -114,7 +118,7 @@
         </p>
 
         <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-6">
-            <a href="#access" class="btn-press bg-[#0071e3] text-white rounded-full px-8 py-3.5 text-base md:text-lg font-medium min-w-[160px] hover:bg-[#0077ED] transition-all shadow-lg shadow-blue-500/20">
+            <a href="https://xsimpelchat.com" class="btn-press bg-[#0071e3] text-white rounded-full px-8 py-3.5 text-base md:text-lg font-medium min-w-[160px] hover:bg-[#0077ED] transition-all shadow-lg shadow-blue-500/20">
                 国内直连使用
             </a>
             <a href="#guide" class="btn-press text-[#0071e3] hover:underline text-base md:text-lg font-medium flex items-center gap-1 group">
