--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </p>
 
         <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-6">
-            <a href="https://xsimpelchat.com" class="btn-press bg-[#0071e3] text-white rounded-full px-8 py-3.5 text-base md:text-lg font-medium min-w-[160px] hover:bg-[#0077ED] transition-all shadow-lg shadow-blue-500/20">
+            <a href="https://xsimplechat.com" class="btn-press bg-[#0071e3] text-white rounded-full px-8 py-3.5 text-base md:text-lg font-medium min-w-[160px] hover:bg-[#0077ED] transition-all shadow-lg shadow-blue-500/20">
                 国内直连使用
             </a>
             <a href="#guide" class="btn-press text-[#0071e3] hover:underline text-base md:text-lg font-medium flex items-center gap-1 group">
